objects/revcult__General_Configuration__mdt.object
<CustomObject>
    <fields>
        <fullName>revcult__Key__c</fullName>
        <description>The key to identify this general configuration</description>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>revcult__Value_Upgradeable__c</fullName>
        <description>The upgradeable value of this general configuration</description>
        <label>Value Upgradeable</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>revcult__Value__c</fullName>
        <description>The value of this general configuration</description>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>General Configuration</label>
    <pluralLabel>General Configurations</pluralLabel>
</CustomObject>